--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -43,5 +43,22 @@
 
 .about p {
     color: #676767;
-    margin-bottom: ;
+    margin-bottom: 15px;
+}
+
+/* ----- media query ----- */
+@media (max-width: 800px) {
+    .about{
+        flex-direction: column;
+    }
+    
+    .about-left {
+        flex-basis: 100%;
+        margin: 20px;
+        order: 2;
+    }
+
+    .about-right {
+        flex-basis: 100%;
+    }
 }
